<resources>
    <string name="app_name">Android Browser</string>
    <string name="app_version" translatable="false">1.4.0</string>
    <string name="check_update">Check for Update</string>
    <string name="author">Author</string>
    <string name="license">License</string>
    <string name="license_text">No License - All rights reserved</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="app_version_text">Browser Version</string>
</resources>